@@ -1,6 +1,0 @@
-<p>Send a test e-mail to :<p>
-
-<% form_tag(:action => 'send_test_mail') do %>
-  <%= text_field "email", "recipients" %>
-  <%= submit_tag "send" %>
-<% end %>
